TAG: mrkcoordload-5-0-0-1
DATE: 6/5/2012
STAFF: sc
RELEASE: dev
CHANGES: TR7106 initial tag
