@@ -1,3 +1,12 @@
+TAG: mrkcoordload-5-0-0-2
+DATE: 6/5/2012
+STAFF: sc
+RELEASE: dev
+CHANGES: 
+1. createInputFiles.py - added support of naming files with collection
+   abbreviation 
+2. mrkcoordload.sh - added setting  abbreviation in the environment
+
 TAG: mrkcoordload-5-0-0-1
 DATE: 6/5/2012
 STAFF: sc
